refactor(contest-problem): 콘테스트 문제 API 최적화